General refactor and bug fixing

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
     "require": {
-        "aws/aws-sdk-php": "^3.296"
+        "aws/aws-sdk-php": "^3.296",
+      "ext-dom": "*",
+      "ext-mysqli": "*"
     }
 }
